--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ Al mencionar la clase de plantas insectivoras, inmediatamente pensamos en la Ven
 
 <video width="400" controls>
 
-<source src="vi.mp4" type="video/mp4">
+<source src="./imagenes/vi.mp4" type="video/mp4">
 
 </video>
 <br>
